--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -84,8 +84,14 @@
             </div>
             <div class="row">
                 <div class="input-field col s3">
-                    <input class="value" id="ip" type="text" />
-                    <label for="ip" class="translate">IP</label>
+                    <input class="value" id="apikey" type="text" />
+                    <label for="apikey" class="translate">ApiKey</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s3">
+                    <input class="value" id="deviceNames" type="text" />
+                    <label for="deviceNames" class="translate">DeviceNames</label>
                 </div>
             </div>
             <div class="row">
