--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,8 +90,8 @@
             </div>
             <div class="row">
                 <div class="input-field col s3">
-                    <input class="value" id="deviceNames" type="text" />
-                    <label for="deviceNames" class="translate">DeviceNames</label>
+                    <input class="value" id="deviceIds" type="text" />
+                    <label for="deviceIds" class="translate">DeviceIds</label>
                 </div>
             </div>
             <div class="row">
