--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -95,6 +95,12 @@
                 </div>
             </div>
             <div class="row">
+                <div class="input-field col s3">
+                    <input class="value" id="timeout" type="text" />
+                    <label for="timeout" class="translate">Timeout</label>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col s12">
                     <p class="translate">on save</p>
                 </div>
