--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -98,6 +98,7 @@
                 <div class="input-field col s3">
                     <input class="value" id="timeout" type="text" />
                     <label for="timeout" class="translate">Timeout</label>
+                    <div class="translate">TimeoutDesc</div>
                 </div>
             </div>
             <div class="row">
