Added ssl config and fixed poster url

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -84,6 +84,12 @@
             </div>
             <div class="row">
                 <div class="input-field col s3">
+                    <input class="value" id="isSSL" type="checkbox" />
+                    <label for="isSSL" class="translate">isSSL</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s3">
                     <input class="value" id="apikey" type="text" />
                     <label for="apikey" class="translate">ApiKey</label>
                 </div>
